# Artaxes

./: Artaxes.drawio  Artaxes_ER.drawio  Artaxes_Operation.drawio  Asset.py  BMM.py  Backtest.cpp  Backtest.h  Backtest.py  BaseClass.py  CMakeLists.txt  CandlestickPlot.py  Documentation.docx  EdgeFinder.py  Engine.cpp  Engine.h  Indicator.py  MMM.py  Model.py  ModelMoneyManager.py  ModelSystemManager.py  MoneyManager.py  MoneySystemManager.drawio  Money_Management.py  Operation.py  Optimization.py  OptimizedOperationResult.py  PMA.py  PMM.py  Persistance.py  Portfolio.py  PortfolioManager.py  PortfolioMoneyManager.py  PortfolioSystemManager.py  README.md  SMM.py  Storage.py  Strat.py  StratMoneyManager.py  SystemManager.py  System_Management_Algorithm.py  (+13 more)
Backend/: README.md  debug_wf.py
Backend/Assets/: DELETAR_converts_data_to_parquet.py
Backend/Assets/Forex/: AUDCAD_D1.parquet  AUDCAD_H1.parquet  AUDCAD_H4.parquet  AUDCAD_M15.parquet  AUDCAD_M30.parquet  AUDNZD_D1.parquet  AUDNZD_H1.parquet  AUDNZD_H4.parquet  AUDNZD_M15.parquet  AUDNZD_M30.parquet  AUDUSD_D1.parquet  AUDUSD_H1.parquet  AUDUSD_H4.parquet  AUDUSD_M15.parquet  AUDUSD_M30.parquet  EURUSD_D1.parquet  EURUSD_H1.parquet  EURUSD_H4.parquet  EURUSD_M15.parquet  EURUSD_M30.parquet  GBPUSD_D1.parquet  GBPUSD_H1.parquet  GBPUSD_H4.parquet  GBPUSD_M15.parquet  GBPUSD_M30.parquet  NZDUSD_D1.parquet  NZDUSD_H1.parquet  NZDUSD_H4.parquet  NZDUSD_M15.parquet  NZDUSD_M30.parquet  USDCAD_D1.parquet  USDCAD_H1.parquet  USDCAD_H4.parquet  USDCAD_M15.parquet  USDCAD_M30.parquet  USDCHF_D1.parquet  USDCHF_H1.parquet  (+9 more)
Backend/api/: deps.py  main.py  models.py
Backend/backtesting_platform.egg-info/: PKG-INFO
Backend/core/: Asset.py  BaseClass.py  Indicator.py  Model.py  ModelMoneyManager.py  ModelSystemManager.py  MoneyManager.py  Operation.py  Portfolio.py  PortfolioMoneyManager.py  PortfolioSystemManager.py  Storage.py  Strat.py  StratBuilder.py  StratMoneyManager.py  StratSystemManager.py  SystemManager.py  Walkforward.py
Backend/db/: Database.py  schema.sql
Backend/functions/: hjb.py
Backend/indicators/: ATR_SL.py  AVAT.py  GARCH.py  GlobalRisk.py  HARComponents.py  HURST.py  LewellenBarndorffJump.py  LinearRegression.py  LyapunovExpoent.py  MA.py  MACDV.py  ParkinsonVol.py  PivotPoints.py  PivotTrend.py  PriorCote.py  QbSB.py  RawData.py  VAR.py  Volatility.py
Backend/metrics/: Metrics.py
Backend/src/: Trade.h  Utils.h  backtest.cpp  backtest.h  bindings.cpp  operation.cpp
Editor/Strats/: strat_template.py
Frontend/: App.tsx  FilterBar.tsx  ModeA.tsx  ModeB.tsx  Package.json  Sidebar.tsx  Tailwing.config  TreeRow.tsx  Tsconfig.json  basket.ts  index.css  index.html  index.ts  package-lock.json  postcss.config.js  vite.config.js
Frontend/api/: client.ts
Frontend/src/: App.tsx
Indicators/: ARIMA.py  AUTOCORRELATION.py  Cointegration.py  DCS.py  DayOpen.py  GARCH.py  GBHAR_OLD.py  HARComponents.py  HMM.py  HURST.py  HawkesJumpDistribution.py  HawkesProcess.py  KALMAN.py  LewellenBarndorffJump.py  MA.py  MACDV.py  MOMERSION.py  ParkinsonVol.py  PriorCote.py  RSIZScore.py  VAR.py  VIXFIX.py  VolATRZ.py  VolBinaryPredictor.py  VolFeatureEng.py  VolModelManager.py
api/: endpoints.txt
api/routers/: assets.py  operations.py  results.py
backtesting_platform.egg-info/: SOURCES.txt  top_level.txt
core/: EdgeFinder.py  Operation.py  PortfolioMoneyManager.py  StratMoneyManager.py
db/: Database.py  schema.sql
metrics/: Metrics.py
raw/: DELETAR_converts_data_to_parquet.py  WIN$_MN_202104010000_202601010000.csv  WIN$_W1_202104110000_202601040000.csv
raw/Forex/: AUDCAD_D1.csv  AUDCAD_H4.csv  AUDNZD_D1.csv  AUDNZD_H4.csv  AUDUSD_D1.csv  AUDUSD_H4.csv  EURUSD_D1.csv  EURUSD_H4.csv  GBPUSD_D1.csv  GBPUSD_H4.csv  NZDUSD_D1.csv  NZDUSD_H4.csv  USDCAD_D1.csv  USDCAD_H4.csv  USDCHF_D1.csv  USDCHF_H4.csv  USDJPY_D1.csv  USDJPY_H4.csv
src/: ExprDSL.h  Trade.h  Utils.h  backtest.cpp  backtest.h  bindings.cpp  engine.cpp  engine.h  money_manager.cpp  money_manager.h  operation.cpp  operation.h  trades_to_json.h
(+376 files in other folders)
