[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backtesting-platform"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "polars",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "db*", "core*"]







